tests/semantic/invalid/59_t_method_return_mismatch.hulk
type Parent() {
    greet() => "hello";
}
type Child( ) inherits Parent() {
    greet() => 1;
}
print(0);
